#APPBUG-4445 XC popup form tab header alignment fix
git-svn-id: https://appdevsvn.nj01/appdev/FreshDirect/trunk@41511 842219ff-9341-0410-a943-573460bdd4de

--- a/projects/Media/docroot/assets/css/global/forms.css
+++ b/projects/Media/docroot/assets/css/global/forms.css
@@ -290,10 +290,6 @@ label.tabs {
   margin-left: 4px;
 }
 
-label.tabs:first-child {
-	margin-left: 135px;
-}
-
 .tabs input[type="radio"] {
 	display: none;
 }
@@ -312,6 +308,7 @@ span[fdform-error] {
 
 .formselector {
 	background: #e9e9e9;
+  text-align: center;
 }
 
 /* field sizes */
